deployment/gke-prod-manifests/admin-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: admin-service
  name: admin-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: admin-service
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/cs3219-project-default: "true"
        io.kompose.service: admin-service
    spec:
      containers:
        - env:
            - name: FIREBASE_SERVICE_ACCOUNT
              valueFrom:
                secretKeyRef:
                  name: firebase-service-account
                  key: firebase-service-account
            - name: PORT
              value: "5005"
          image: asia-southeast1-docker.pkg.dev/peerprep-group11-prod/codeparty-prod-images/admin-service:latest
          imagePullPolicy: Always
          name: admin-service
          ports:
            - containerPort: 5005
              hostPort: 5005
              protocol: TCP
          resources: 
            # You must specify requests for CPU to autoscale
            # based on CPU utilization
            requests:
              cpu: "100m"
      restartPolicy: Always
status: {}
