deployment/gke-prod-manifests/collaboration-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: collaboration-service
  name: collaboration-service
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: collaboration-service
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/cs3219-project-default: "true"
        io.kompose.service: collaboration-service
    spec:
      containers:
        - env:
            - name: PRISMA_DATABASE_URL
              valueFrom:
                secretKeyRef:
                  name: prisma-database-url
                  key: prisma-database-url
            - name: PORT
              value: "5003"
          image: asia-southeast1-docker.pkg.dev/peerprep-group11-prod/codeparty-prod-images/collaboration-service:latest
          name: collaboration-service
          ports:
            - containerPort: 5003
              hostPort: 5003
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
