deployment/gke-prod-manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: frontend
  name: frontend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/cs3219-project-default: "true"
        io.kompose.service: frontend
    spec:
      containers:
        - image: asia-southeast1-docker.pkg.dev/peerprep-group11-prod/codeparty-prod-images/frontend:latest
          name: frontend
          ports:
            - containerPort: 3000
              hostPort: 3000
              protocol: TCP
          resources: 
            # You must specify requests for CPU to autoscale
            # based on CPU utilization
            requests:
              cpu: "100m"
      restartPolicy: Always
status: {}
