deployment/gke-prod-manifests/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: gateway
  name: gateway
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gateway
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/cs3219-project-default: "true"
        io.kompose.service: gateway
    spec:
      containers:
        - env:
            - name: FIREBASE_SERVICE_ACCOUNT
              valueFrom:
                secretKeyRef:
                  name: firebase-service-account
                  key: firebase-service-account
            - name: HTTP_PROXY_PORT
              value: "4000"
            - name: WS_MATCH_PROXY_PORT
              value: "4002"
            - name: WS_COLLABORATION_PROXY_PORT
              value: "4003"
            - name: FRONTEND_ADDRESS
              value: "https://www.codeparty.org"
          image: asia-southeast1-docker.pkg.dev/peerprep-group11-prod/codeparty-prod-images/gateway:latest
          imagePullPolicy: Always
          name: gateway
          ports:
            - containerPort: 4000
              hostPort: 4000
              protocol: TCP
            - containerPort: 4002
              hostPort: 4002
              protocol: TCP
            - containerPort: 4003
              hostPort: 4003
              protocol: TCP
            # Needed for health check
            - containerPort: 8080
              hostPort: 8080
              protocol: TCP
          resources: 
            # You must specify requests for CPU to autoscale
            # based on CPU utilization
            requests:
              cpu: "100m"
      restartPolicy: Always
status: {}
