deployment/gke-prod-manifests/question-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: question-service
  name: question-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: question-service
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/cs3219-project-default: "true"
        io.kompose.service: question-service
    spec:
      containers:
        - env:
            - name: MONGO_ATLAS_URL
              valueFrom:
                secretKeyRef:
                  name: mongo-atlas-url
                  key: mongo-atlas-url
            - name: PORT
              value: "5004"
          image: asia-southeast1-docker.pkg.dev/peerprep-group11-prod/codeparty-prod-images/question-service:latest
          name: question-service
          ports:
            - containerPort: 5004
              hostPort: 5004
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
