deployment/gke-prod-manifests/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: user-service
  name: user-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: user-service
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/cs3219-project-default: "true"
        io.kompose.service: user-service
    spec:
      containers:
        - env:
            - name: PRISMA_DATABASE_URL
              valueFrom:
                secretKeyRef:
                  name: prisma-database-url
                  key: prisma-database-url
            - name: PORT
              value: "5001"
          image: asia-southeast1-docker.pkg.dev/peerprep-group11-prod/codeparty-prod-images/user-service:latest
          name: user-service
          ports:
            - containerPort: 5001
              hostPort: 5001
              protocol: TCP
          resources: 
            # You must specify requests for CPU to autoscale
            # based on CPU utilization
            requests:
              cpu: "250m"
      restartPolicy: Always
status: {}
