deployment/gke-prod-manifests/admin-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: admin-service
  name: admin-service
  namespace: default
spec:
  ports:
    - name: "5005"
      port: 5005
      targetPort: 5005
  selector:
    io.kompose.service: admin-service
status:
  loadBalancer: {}
