deployment/gke-prod-manifests/collaboration-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: collaboration-service
  name: collaboration-service
  namespace: default
spec:
  ports:
    - name: "5003"
      port: 5003
      targetPort: 5003
  selector:
    io.kompose.service: collaboration-service
status:
  loadBalancer: {}
