deployment/gke-prod-manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: frontend
  name: frontend
  namespace: default
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: frontend
  type: LoadBalancer
status:
  loadBalancer: {}
