deployment/gke-prod-manifests/matching-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: matching-service
  name: matching-service
  namespace: default
spec:
  ports:
    - name: "5002"
      port: 5002
      targetPort: 5002
  selector:
    io.kompose.service: matching-service
status:
  loadBalancer: {}
