deployment/gke-prod-manifests/question-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: question-service
  name: question-service
  namespace: default
spec:
  ports:
    - name: "5004"
      port: 5004
      targetPort: 5004
  selector:
    io.kompose.service: question-service
status:
  loadBalancer: {}
