deployment/gke-prod-manifests/user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: user-service
  name: user-service
  namespace: default
spec:
  ports:
    - name: "5001"
      port: 5001
      targetPort: 5001
  selector:
    io.kompose.service: user-service
status:
  loadBalancer: {}
