deployment/gke-prod-manifests/gateway-wscollaboration-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-wscollaboration-ingress
  annotations:
    networking.gke.io/managed-certificates: gke-managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: gateway
      port:
        number: 4003
